Opened 16 years ago
Closed 16 years ago
#2395 closed bug (fixed)
Preferences; Backgrounds; Icon label outline
Reported by: | nutela | Owned by: | korli |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Preferences/Backgrounds | Version: | R1/pre-alpha1 |
Keywords: | Cc: | mattmadia@… | |
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
- When no image selected (Image: None) the option "Icon label outline" is unchecked but is still applied which is wrong.
- The "Icon label outline" checkbox cannot be checked when no image for the desktop background is selected.
Attachments (2)
Change History (8)
by , 16 years ago
comment:2 by , 16 years ago
Just to note, if a user enables the Icon label outline. They will need to select a background to disable it.
comment:3 by , 16 years ago
Cc: | added |
---|
comment:4 by , 16 years ago
Steps to reproduce bug:
Open Backgrounds preflet.
Make sure Icon label outline is not checked. Set Image to any image and apply. Set Image to None and Apply.
The GUI control for Icon label outline will be disabled. In addition, Tracker will believe Icon label outline is enabled.
comment:5 by , 16 years ago
hrev29189 should help.
For the second point, is this really a bug ? IMO the preflet disabled the checkbox for a good reason, because its value cannot be changed when no image is selected.
comment:6 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Hi, I commited a fix for this in hrev30495! Thanks! If any problems arise, ping me :-)
note the gray Icon label outline checkbox